# llm_server_template

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd_release.yml_template
.gitub/: CODEOWNERS
.gitub/workflows/: cd_dev-release.yml_template  cd_stg-release.yml_template  ci.yml_template  pr.yml_template
src/: main.py
src/chains/: claude_chain.py  gemini_chain.py  gpt_chain.py
src/routes/: router.py
src/settings/: anthropic_settings.py  gemini_settings.py  openai_settings.py
