[project]
name = "llm-server-template"
version = "0.1.0"
description = "template"
authors = [{ name = "LDG", email = "leesrock113@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "langserve>=0.3.1",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-anthropic (>=0.3.14,<0.4.0)",
    "langchain-google-vertexai (>=2.0.24,<3.0.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
]

scripts = { run = "src.__main__:main" }

[tool.poetry]
name = "llm-server-template"
version = "0.1.0"
description = "A LangServe template project"
authors = ["LDG <leesrock113@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.13"
pytest = "^8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
